build_error.txt
[1/2] Building C object examples/bunnymark/CMakeFiles/bunnymark_demo.dir/main.c.obj
FAILED: examples/bunnymark/CMakeFiles/bunnymark_demo.dir/main.c.obj 
C:\PROGRA~1\LLVM\bin\clang.exe -DBUNNYMARK_HD_AVAILABLE=1 -DCGLM_ALL_UNALIGNED -IC:/projects/neotolis-engine/examples/bunnymark/generated -IC:/projects/neotolis-engine/engine/core/.. -IC:/projects/neotolis-engine/shared/include -IC:/projects/neotolis-engine/engine/log/.. -IC:/projects/neotolis-engine/engine/app/.. -IC:/projects/neotolis-engine/engine/time/.. -IC:/projects/neotolis-engine/engine/input/.. -IC:/projects/neotolis-engine/engine/window/.. -IC:/projects/neotolis-engine/deps/glfw/include -IC:/projects/neotolis-engine/engine/resource/.. -IC:/projects/neotolis-engine/engine/http/.. -IC:/projects/neotolis-engine/engine/fs/.. -IC:/projects/neotolis-engine/engine/hash/.. -IC:/projects/neotolis-engine/engine/material/.. -IC:/projects/neotolis-engine/engine/pool/.. -IC:/projects/neotolis-engine/engine/entity/.. -IC:/projects/neotolis-engine/engine/transform_comp/.. -IC:/projects/neotolis-engine/engine/comp_storage/.. -IC:/projects/neotolis-engine/engine/material_comp/.. -IC:/projects/neotolis-engine/engine/drawable_comp/.. -IC:/projects/neotolis-engine/engine/sprite_comp/.. -IC:/projects/neotolis-engine/engine/atlas/.. -IC:/projects/neotolis-engine/engine/renderers/.. -IC:/projects/neotolis-engine/engine/render/.. -IC:/projects/neotolis-engine/engine/sort/.. -IC:/projects/neotolis-engine/engine/stats/.. -IC:/projects/neotolis-engine/engine/font/.. -IC:/projects/neotolis-engine/engine/graphics/.. -IC:/projects/neotolis-engine/engine/basisu -isystem C:/projects/neotolis-engine/deps/cglm/include -O0 -std=gnu17 -D_DEBUG -D_DLL -D_MT -Xclang --dependent-lib=msvcrtd -g -Xclang -gcodeview -Wall -Wextra -Wpedantic -Wshadow -Wconversion -Wdouble-promotion -Wformat=2 -Wundef -Wno-unused-parameter -Werror -fsanitize=address,undefined -fno-omit-frame-pointer -fno-sanitize-recover=all -MD -MT examples/bunnymark/CMakeFiles/bunnymark_demo.dir/main.c.obj -MF examples\bunnymark\CMakeFiles\bunnymark_demo.dir\main.c.obj.d -o examples/bunnymark/CMakeFiles/bunnymark_demo.dir/main.c.obj -c C:/projects/neotolis-engine/examples/bunnymark/main.c
C:/projects/neotolis-engine/examples/bunnymark/main.c:213:42: error: read-only variable is not assignable
  213 |     *nt_sprite_comp_flags(s_entities[i]) = NT_SPRITE_FLAG_FLIP_Y;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^
1 error generated.
ninja: build stopped: subcommand failed.
